[workspace]
members = [
    "dbt-yaml",
    "dbt-yaml_derive",
    "dbt-yaml_schemars_derive"
]
resolver = "2"

[workspace.dependencies]
"dbt-yaml" = { path = "dbt-yaml" }
"dbt-yaml_derive" = { version = "0.9.1", path = "dbt-yaml_derive" }
"dbt-yaml_schemars_derive" = { version = "0.9.1", path = "dbt-yaml_schemars_derive" }
