[package]
edition = "2024"
name = "dbt-yaml_derive"
version = "0.9.1"
description = "Derive macros for dbt-yaml"
authors = ["Bo Lin <bo.lin@dbtlabs.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sdf-labs/dbt-yaml"
rust-version = "1.88"

[lib]
proc-macro = true

[dependencies]
heck = "0.5.0"
proc-macro2 = { version = "1.0", features = ["proc-macro"] }
quote = { version = "1.0", features = ["proc-macro"] }
syn = { version = "2.0", features = ["full"] }
